--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "mysql": "^2.18.1"
   }
 }
