--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "mdb-vue-ui-kit": "^1.8.0",
+    "moment": "^2.29.1",
     "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-awesome": "^4.5.0",
