--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.6.11",
     "vue-awesome": "^4.5.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
